# Copyright (c) 2020 Jeron Aldaron Lau
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0>, the MIT license
# <LICENSE-MIT or http://opensource.org/licenses/MIT>, or the ZLib
# license <LICENSE-ZLIB or https://www.zlib.net/zlib_license.html> at
# your option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "fon"
version = "0.2.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "MIT OR Apache-2.0 OR Zlib"
documentation = "https://docs.rs/fon"
homepage = "https://github.com/AldaronLau/fon/blob/master/CHANGELOG.md"
repository = "https://github.com/AldaronLau/fon"
readme = "README.md"
description = "Rust audio types, resampling, processing and mixing library."
keywords = ["audio", "resample", "processing", "wave", "sound"]
categories = ["multimedia::audio", "multimedia"]

[dependencies]
