# Copyright Jeron Aldaron Lau 2020.
# Distributed under either the Apache License, Version 2.0
#    (See accompanying file LICENSE_APACHE_2_0.txt or copy at
#          https://apache.org/licenses/LICENSE-2.0),
# or the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_BOOST_1_0.txt or copy at
#          https://www.boost.org/LICENSE_1_0.txt)
# at your option. This file may not be copied, modified, or distributed except
# according to those terms.

[package]
name = "fon"
version = "0.4.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "Apache-2.0 OR BSL-1.0"
documentation = "https://docs.rs/fon"
homepage = "https://github.com/AldaronLau/fon/blob/master/CHANGELOG.md"
repository = "https://github.com/AldaronLau/fon"
readme = "README.md"
description = "Rust audio types, resampling, processing and mixing library."
keywords = ["audio", "resample", "processing", "wave", "sound"]
categories = ["multimedia::audio", "multimedia"]

[dependencies]
