# Fon
# Copyright © 2020-2022 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "fon"
version = "0.6.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "Apache-2.0 OR MIT OR BSL-1.0"
documentation = "https://docs.rs/fon"
homepage = "https://github.com/AldaronLau/fon/blob/main/CHANGELOG.md"
repository = "https://github.com/AldaronLau/fon"
readme = "README.md"
description = "Rust audio types, resampling, processing and mixing library."
keywords = ["audio", "resample", "processing", "wave", "sound"]
categories = ["multimedia::audio", "multimedia", "algorithms", "data-structures"]
include = ["Cargo.toml", "src/*"]

[dependencies]
libm = "0.2"
